--- a/openatlas/templates/import/index.html
+++ b/openatlas/templates/import/index.html
@@ -6,7 +6,7 @@
     {% if 'admin'|is_authorized %}
         <div class="toolbar">
             {{ 'Import'|manual_link }}
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('import_project_insert') }}">+ {{ _('project')|uc_first }}</a>
+            {{ _('project')|button(url_for('import_project_insert')) }}
         </div>
     {% endif %}
     {{ table.display()|safe }}
