Remove obsolete settings site_header and map_cluster_enabled

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,6 +4,11 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
+#site-name-and-version {
+    position: absolute;
+    right: 16px
+}
+
 div.preview {
     margin-left: 1em;
 }
