--- a/openatlas/templates/admin/log.html
+++ b/openatlas/templates/admin/log.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ _('delete all logs')|button(url_for('admin_log_delete'), js='onclick="return confirm(\'' + _('delete all logs')|uc_first + '?\')"') }}
+        {{ _('delete all logs')|button(url_for('admin_log_delete'), onclick="return confirm('" + _('delete all logs')|uc_first + "?')") }}
     </div>
     {{ form|display_form }}
     {{ table.display()|safe }}
