Removing unneeded closing tag sign in templates

--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -35,7 +35,7 @@
                 {{ test_result['range']|link|safe }}
             </p>
             {% if not test_result['domain_error'] and not test_result['range_error'] %}
-                <p>{{ _('valid link')|uc_first }}<br/>
+                <p>{{ _('valid link')|uc_first }}<br>
             {% endif %}
             {% if test_result['domain_error'] %}
                 <p>
