--- a/openatlas/templates/object/view.html
+++ b/openatlas/templates/object/view.html
@@ -13,7 +13,7 @@
     <div id="tab-info">
         <div class="toolbar">
             {% if 'contributor'|is_authorized %}
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('object_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
+                {{ _('edit')|button(url_for('object_update', id_=object_.id)) }}
                 {{ object_|display_delete_link }}
             {% endif %}
             {{ object_.id|bookmark_toggle }}
@@ -32,8 +32,8 @@
     <div id="tab-source">
         {% if 'contributor'|is_authorized %}
             <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('object_add_source', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
+                {{ _('add')|button(url_for('object_add_source', id_=object_.id)) }}
+                {{ _('source')|button(url_for('source_insert', origin_id=object_.id)) }}
             </div>
         {% endif %}
         {{ tables['source'].display('source')|safe }}
@@ -41,7 +41,7 @@
     <div id="tab-event">
         {% if 'contributor'|is_authorized %}
             <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code='E9', origin_id=object_.id) }}">+ {{ 'E9'|get_class_name }}</a>
+                {{ 'E9'|get_class_name|button(url_for('event_insert', code='E9', origin_id=object_.id)) }}
             </div>
         {% endif %}
         {{ tables['event'].display('event')|safe }}
