--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -31,7 +31,7 @@
         <div id="tab-info">
             <div class="toolbar">
                 {% if 'contributor'|is_authorized %}
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
+                    {{ _('edit')|button(url_for('place_update', id_=object_.id)) }}
                     {% if not subunits %}
                         {{ object_|display_delete_link }}
                     {% endif %}
@@ -54,8 +54,8 @@
         <div id="tab-source">
             {% if 'contributor'|is_authorized %}
             <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_source', id_=object_.id) }}">{{ _('add')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
+                {{ _('add')|button(url_for('place_add_source', id_=object_.id)) }}
+                {{ _('source')|button(url_for('source_insert', origin_id=object_.id)) }}
             </div>
             {% endif %}
             {{ tables['source'].display('source')|safe }}
@@ -64,7 +64,7 @@
             {% if 'contributor'|is_authorized %}
                 <div class="toolbar">
                     {% for code in config['CLASS_CODES']['event'] %}
-                        <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code=code, origin_id=object_.id) }}">+ {{ code|get_class_name }}</a>
+                        {{ code|get_class_name|button(url_for('event_insert', code=code, origin_id=object_.id)) }}
                     {% endfor %}
                 </div>
             {% endif %}
@@ -78,10 +78,10 @@
         <div id="tab-reference">
             {% if 'contributor'|is_authorized %}
                 <div class="toolbar">
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_reference', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography', origin_id=object_.id) }}">+ {{ _('bibliography')|uc_first }}</a>
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition', origin_id=object_.id) }}">+ {{ _('edition')|uc_first }}</a>
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='external_reference', origin_id=object_.id) }}">+ {{ _('external reference')|uc_first }}</a>
+                    {{ _('add')|button(url_for('place_add_reference', id_=object_.id)) }}
+                    {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=object_.id)) }}
+                    {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=object_.id)) }}
+                    {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=object_.id)) }}
                 </div>
             {% endif %}
             {{ tables['reference'].display('reference')|safe }}
@@ -89,8 +89,8 @@
         <div id="tab-file">
             {% if 'contributor'|is_authorized %}
                 <div class="toolbar">
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_file', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert', origin_id=object_.id) }}">+ {{ _('file')|uc_first }}</a>
+                    {{ _('add')|button(url_for('place_add_file', id_=object_.id)) }}
+                    {{ _('file')|button(url_for('file_insert', origin_id=object_.id)) }}
                 </div>
             {% endif %}
             {{ tables['file'].display('file')|safe }}
@@ -98,27 +98,27 @@
         {% if object_.system_type == 'place' %}
             <div id="tab-feature">
                 <div class="toolbar">
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('feature')|uc_first }}</a>
+                    {{ _('feature')|button(url_for('place_insert', origin_id=object_.id)) }}
                 </div>
                 {{ tables['feature'].display('feature')|safe }}
             </div>
         {% elif object_.system_type == 'feature' %}
             <div id="tab-stratigraphic-unit">
                 <div class="toolbar">
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('stratigraphic unit')|uc_first }}</a>
+                    {{ _('stratigraphic unit')|button(url_for('place_insert', origin_id=object_.id)) }}
                 </div>
                 {{ tables['stratigraphic-unit'].display('stratigraphic-unit')|safe }}
             </div>
         {% elif object_.system_type == 'stratigraphic unit' %}
             <div id="tab-find">
                 <div class="toolbar">
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('find')|uc_first }}</a>
+                    {{ _('find')|button(url_for('place_insert', origin_id=object_.id)) }}
                 </div>
                 {{ tables['find'].display('find')|safe }}
             </div>
             <div id="tab-human-remains">
                 <div class="toolbar">
-                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id, system_type='human_remains')}}">+ {{ _('human remains')|uc_first }}</a>
+                    {{ _('human remains')|button(url_for('place_insert', origin_id=object_.id, system_type='human_remains')) }}
                 </div>
                 {{ tables['human-remains'].display('human_remains')|safe }}
             </div>
