--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -6,8 +6,8 @@
     {% if not config['DEMO_MODE'] %}
         <div class="toolbar">
             {{ 'Profile'|manual_link }}
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('profile_update') }}">{{ _('edit')|uc_first }}</a>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('profile_password') }}">{{ _('change password')|uc_first }}</a>
+            {{ _('edit')|button(url_for('profile_update')) }}
+            {{ _('change password')|button(url_for('profile_password')) }}
         </div>
     {% endif %}
     <div style="float:left;">
