--- a/openatlas/templates/overlay/insert.html
+++ b/openatlas/templates/overlay/insert.html
@@ -22,6 +22,6 @@
                 <div class="table-cell">{{ form.bottom_right_northing(class_='number') }}</div>
             </div>
         </div>
-        {{ form.save }}
+        {{ form.save(class=config['CSS']['button']['primary']) }}
     </form>
 {% endblock %}
