--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -74,7 +74,7 @@
             </div>
         {% endif %}
         <div style="clear:both"></div>
-        {{ form.save}}
+        {{ form.save(class=config['CSS']['button']['primary']) }}
     </form>
 
 {% endblock %}
