--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -6,7 +6,7 @@
     {% if 'contributor'|is_authorized %}
         <div class="toolbar">
             {{ 'source'|manual_link }}
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert') }}">+ {{ _('source')|uc_first }}</a>
+            {{ _('source')|button(url_for('source_insert')) }}
         </div>
     {% endif %}
     {{ table.display()|safe }}
