--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -7,9 +7,9 @@
         <p class="error">
             {{ _('error modified by %(username)s', username=modifier|safe) }}
         </p>
-        <p>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_update', id_=source.id) }}">{{ _('reload')|uc_first }}</a>
-        </p>
+        <div class="toolbar">
+            {{ _('reload')|button(url_for('source_update', id_=source.id)) }}
+        </div>
     {% endif %}
     {{ form|display_form }}
 {% endblock %}
