--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -21,7 +21,7 @@
     <div id="tab-info">
         <div class="toolbar">
             {% if 'contributor'|is_authorized %}
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_update', id_=source.id) }}">{{ _('edit')|uc_first }}</a>
+                {{ _('edit')|button(url_for('source_update', id_=source.id)) }}
                 {{ source|display_delete_link }}
             {% endif %}
             {{ source.id|bookmark_toggle }}
@@ -44,12 +44,12 @@
             <div id="tab-{{ name }}">
                 {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
                     <div class="toolbar">
-                        <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_add', id_=source.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
+                        {{ _('add')|button(url_for('source_add', id_=source.id, class_name=name)) }}
                         {% if name == 'place' %}
-                            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=source.id) }}">+ {{ _('place')|uc_first }}</a>
+                            {{ _('place')|button(url_for('place_insert', origin_id=source.id)) }}
                         {% else %}
                             {% for code in config['CLASS_CODES'][name]%}
-                                <a class="btn btn-outline-primary btn-sm" href="{{ url_for(name + '_insert', code=code, origin_id=source.id) }}">+ {{ code|get_class_name }}</a>
+                                {{ code|get_class_name|button(url_for(name + '_insert', code=code, origin_id=source.id)) }}
                             {% endfor %}
                         {% endif %}
                     </div>
@@ -61,10 +61,10 @@
     <div id="tab-reference">
         {% if 'contributor'|is_authorized %}
             <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_add_reference', id_=source.id) }}">{{ _('add')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography', origin_id=source.id) }}">+ {{ _('bibliography')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition', origin_id=source.id) }}">+ {{ _('edition')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='external_reference', origin_id=source.id) }}">+ {{ _('external reference')|uc_first }}</a>
+                {{ _('add')|button(url_for('source_add_reference', id_=source.id)) }}
+                {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=source.id)) }}
+                {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=source.id)) }}
+                {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=source.id)) }}
             </div>
         {% endif %}
         {{ tables['reference'].display('reference')|safe }}
@@ -72,7 +72,7 @@
     <div id="tab-text">
         {% if 'contributor'|is_authorized %}
             <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('translation_insert', source_id=source.id) }}">+ {{ _('text')|uc_first }}</a>
+                {{ _('text')|button(url_for('translation_insert', source_id=source.id)) }}
             </div>
         {% endif %}
         {{ tables['text'].display('text')|safe }}
@@ -80,8 +80,8 @@
     <div id="tab-file">
         {% if 'contributor'|is_authorized %}
             <div class="toolbar">
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_add_file', id_=source.id)}}">{{ _('add')|uc_first }}</a>
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert', origin_id=source.id) }}">+ {{ _('file')|uc_first }}</a>
+                {{ _('add')|button(url_for('source_add_file', id_=source.id)) }}
+                {{ _('file')|button(url_for('file_insert', origin_id=source.id)) }}
             </div>
         {% endif %}
         {{ tables['file'].display('file')|safe }}
