--- a/openatlas/templates/login/index.html
+++ b/openatlas/templates/login/index.html
@@ -6,18 +6,15 @@
     {{ form|display_form('login-form')|safe }}
     {% if config['DEMO_MODE'] %}
         <p>User: Demolina, Pass: Demolina</p>
-    {% endif %}
-    {% if session['settings']['mail'] %}
-        <p>
-            <a href="{{ url_for('reset_password') }}">{{ _('Forgot your password?') }}</a>
-        </p>
-    {% endif %}
-    {% if config['DEMO_MODE'] %}
         <script>
             $(document).ready(function () {
                 $("#username").val('Demolina');
                 $("#password").val('Demolina');
             });
         </script>
+    {% elif session['settings']['mail'] %}
+        <p>
+            <a href="{{ url_for('reset_password') }}">{{ _('Forgot your password?') }}</a>
+        </p>
     {% endif %}
 {% endblock %}
