--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -43,7 +43,9 @@
         {% if tables['latest'].rows %}
             <h1>{{ _('latest')|uc_first }}</h1>
             {{ tables['latest'].display('latest')|safe }}
-            <a href="{{ url_for('user_activity') }}">{{ _('Show all activity')|uc_first }}</a>
+            <div class="toolbar">
+                {{ _('Show all activity')|button(url_for('user_activity')) }}
+            </div>
         {% endif %}
         {% if tables['bookmarks'].rows %}
             <h1>{{ _('bookmarks')|uc_first }}</h1>
