--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -14,7 +14,7 @@
         {{ _("I'm aware of the risk and have read the documentation.") }}
     </p>
     <div class="toolbar">
-        {{ _('proceed')|button('#', id_='proceed_button') }}
+        {{ _('proceed')|button(id_='proceed_button') }}
     </div>
     <script>
         $('#sql_risk_aware').change(function() {
