--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -3,88 +3,90 @@
     {{ [[_('source'), 'source_index'], source.name]|crumb }}
 {% endblock %}
 {% block content %}
-<div id="tabs" class="tabs-container">
-    <ul>
-        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
-        <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
-        <li><a href="#tab-place">{{ _('place')|uc_first }} {{ tables['place']|format_tab_number }}</a></li>
+<div >
+    <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item"> <a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
+        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
+        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
+        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-place">{{ _('place')|uc_first }} {{ tables['place']|format_tab_number }}</a></li>
         {% for table_name in ['feature', 'stratigraphic-unit', 'find'] %}
             {% if tables[table_name].rows %}
-                <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number }}</a></li>
+                <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number }}</a></li>
             {% endif %}
         {% endfor %}
-        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
-        <li><a href="#tab-text">{{ _('texts')|uc_first }} {{ tables['text']|format_tab_number }}</a></li>
-        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
+        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
+        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-text">{{ _('texts')|uc_first }} {{ tables['text']|format_tab_number }}</a></li>
+        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
     </ul>
-    <div id="tab-info">
-        <div class="toolbar">
-            {% if 'contributor'|is_authorized %}
-                {{ _('edit')|button(url_for('source_update', id_=source.id)) }}
-                {{ source|display_delete_link }}
-            {% endif %}
-            {{ source.id|bookmark_toggle }}
-        </div>
-        <h1>{{ source.name }}</h1>
-        <div>
-            {{ profile_image_id|display_profile_image }}
-            <div style="float:left;">
-                {{ info|display_info }}
-                {{ source|note }}
-                {{ source|display_external_references }}
-                {{ source|description }}
-                {{ source|api_link }}
-            </div>
-            <div style="clear:both;"></div>
-        </div>
-    </div>
-    {% for name in ['event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find'] %}
-        {% if name not in ['feature', 'stratigraphic-unit', 'find'] or tables[name].rows %}
-            <div id="tab-{{ name }}">
-                {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
-                    <div class="toolbar">
-                        {{ _('add')|button(url_for('source_add', id_=source.id, class_name=name)) }}
-                        {% if name == 'place' %}
-                            {{ _('place')|button(url_for('place_insert', origin_id=source.id)) }}
-                        {% else %}
-                            {% for code in config['CLASS_CODES'][name]%}
-                                {{ code|get_class_name|button(url_for(name + '_insert', code=code, origin_id=source.id)) }}
-                            {% endfor %}
-                        {% endif %}
-                    </div>
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
+            <div class="toolbar">
+                {% if 'contributor'|is_authorized %}
+                    {{ _('edit')|button(url_for('source_update', id_=source.id)) }}
+                    {{ source|display_delete_link }}
                 {% endif %}
-                {{ tables[name].display(name)|safe }}
+                {{ source.id|bookmark_toggle }}
             </div>
-        {% endif %}
-    {% endfor %}
-    <div id="tab-reference">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('source_add_reference', id_=source.id)) }}
-                {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=source.id)) }}
-                {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=source.id)) }}
-                {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=source.id)) }}
+            <h1>{{ source.name }}</h1>
+            <div>
+                {{ profile_image_id|display_profile_image }}
+                <div style="float:left;">
+                    {{ info|display_info }}
+                    {{ source|note }}
+                    {{ source|display_external_references }}
+                    {{ source|description }}
+                    {{ source|api_link }}
+                </div>
+                <div style="clear:both;"></div>
             </div>
-        {% endif %}
-        {{ tables['reference'].display('reference')|safe }}
-    </div>
-    <div id="tab-text">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('text')|button(url_for('translation_insert', source_id=source.id)) }}
-            </div>
-        {% endif %}
-        {{ tables['text'].display('text')|safe }}
-    </div>
-    <div id="tab-file">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('source_add_file', id_=source.id)) }}
-                {{ _('file')|button(url_for('file_insert', origin_id=source.id)) }}
-            </div>
-        {% endif %}
-        {{ tables['file'].display('file')|safe }}
+        </div>
+        {% for name in ['event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find'] %}
+            {% if name not in ['feature', 'stratigraphic-unit', 'find'] or tables[name].rows %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-{{ name }}">
+                    {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
+                        <div class="toolbar">
+                            {{ _('add')|button(url_for('source_add', id_=source.id, class_name=name)) }}
+                            {% if name == 'place' %}
+                                {{ _('place')|button(url_for('place_insert', origin_id=source.id)) }}
+                            {% else %}
+                                {% for code in config['CLASS_CODES'][name]%}
+                                    {{ code|get_class_name|button(url_for(name + '_insert', code=code, origin_id=source.id)) }}
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+                    {% endif %}
+                    {{ tables[name].display(name)|safe }}
+                </div>
+            {% endif %}
+        {% endfor %}
+        <div class="tab-pane fade" role="tabpanel" id="tab-reference">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('source_add_reference', id_=source.id)) }}
+                    {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=source.id)) }}
+                    {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=source.id)) }}
+                    {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=source.id)) }}
+                </div>
+            {% endif %}
+            {{ tables['reference'].display('reference')|safe }}
+        </div>
+        <div class="tab-pane fade" role="tabpanel" id="tab-text">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('text')|button(url_for('translation_insert', source_id=source.id)) }}
+                </div>
+            {% endif %}
+            {{ tables['text'].display('text')|safe }}
+        </div>
+        <div class="tab-pane fade" role="tabpanel" id="tab-file">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('source_add_file', id_=source.id)) }}
+                    {{ _('file')|button(url_for('file_insert', origin_id=source.id)) }}
+                </div>
+            {% endif %}
+            {{ tables['file'].display('file')|safe }}
+        </div>
     </div>
 </div>
 {% endblock %}
