--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -546,6 +546,7 @@ div.data-table div.display-none {
 .nav-tabs .nav-link {
     border: none;
     border-radius: initial;
+    line-height: 24px;
 }
 
 .nav-tabs {
