--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -4,123 +4,125 @@
     {{ [[_('actor'), 'actor_index'], actor.name]|crumb }}
 {% endblock %}
 {% block content %}
-<div id="tabs" class="tabs-container">
-    <ul>
-        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
-        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
-        <li><a href="#tab-relation">{{ _('relation')|uc_first }} {{ tables['relation']|format_tab_number }}</a></li>
-        <li><a href="#tab-member-of">{{ _('member of')|uc_first }} {{ tables['member_of']|format_tab_number }}</a></li>
+<div>
+    <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-relation">{{ _('relation')|uc_first }} {{ tables['relation']|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-member-of">{{ _('member of')|uc_first }} {{ tables['member_of']|format_tab_number }}</a></li>
         {% if tables['member'] %}
-            <li><a href="#tab-member">{{ _('member')|uc_first }} {{ tables['member']|format_tab_number }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-member">{{ _('member')|uc_first }} {{ tables['member']|format_tab_number }}</a></li>
         {% endif %}
-        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
         {% if gis_data %}
-            <li><a href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
         {% endif %}
-        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
     </ul>
-    <div id="tab-info">
-        <div class="toolbar">
-            {% if 'contributor'|is_authorized %}
-                {{ _('edit')|button(url_for('actor_update', id_=actor.id)) }}
-                {{ actor|display_delete_link }}
-            {% endif %}
-            {{ actor.id|bookmark_toggle }}
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
+            <div class="toolbar">
+                {% if 'contributor'|is_authorized %}
+                    {{ _('edit')|button(url_for('actor_update', id_=actor.id)) }}
+                    {{ actor|display_delete_link }}
+                {% endif %}
+                {{ actor.id|bookmark_toggle }}
+            </div>
+            <h1>{{ actor.name }}</h1>
+            <div>
+                {{ profile_image_id|display_profile_image }}
+                <div style="float:left;">
+                    {{ info|display_info }}
+                    {{ actor|note }}
+                    {{ actor|display_external_references }}
+                    {{ actor|description }}
+                    {{ actor|api_link }}
+                </div>
+                <div style="clear:both;"></div>
+            </div>
         </div>
-        <h1>{{ actor.name }}</h1>
-        <div>
-            {{ profile_image_id|display_profile_image }}
-            <div style="float:left;">
-                {{ info|display_info }}
-                {{ actor|note }}
-                {{ actor|display_external_references }}
-                {{ actor|description }}
-                {{ actor|api_link }}
-            </div>
-            <div style="clear:both;"></div>
-        </div>
-    </div>
-    <div id="tab-source">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('actor_add_source', id_=actor.id)) }}
-                {{ _('source')|button(url_for('source_insert', origin_id=actor.id)) }}
-            </div>
-        {% endif %}
-        {{ tables['source'].display('source')|safe }}
-    </div>
-    <div id="tab-event">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('involvement_insert', origin_id=actor.id)) }}
-                {% for code in config['CLASS_CODES']['event'] %}
-                    {{ code|get_class_name|button(url_for('event_insert', code=code, origin_id=actor.id)) }}
-                {% endfor %}
-            </div>
-        {% endif %}
-        {{ tables['event'].display('event')|safe }}
-    </div>
-    <div id="tab-relation">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('relation_insert', origin_id=actor.id)) }}
-                {% for code in config['CLASS_CODES']['actor'] %}
-                    {{ code|get_class_name|button(url_for('actor_insert', code=code, origin_id=actor.id)) }}
-                {% endfor %}
-            </div>
-        {% endif %}
-        {{ tables['relation'].display('relation')|safe }}
-    </div>
-    <div id="tab-member-of">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('membership_insert', origin_id=actor.id)) }}
-            </div>
-        {% endif %}
-        {{ tables['member_of'].display('member_of')|safe }}
-    </div>
-    {% if tables['member'] %}
-        <div id="tab-member">
+        <div class="tab-pane fade" role="tabpanel" id="tab-source">
             {% if 'contributor'|is_authorized %}
                 <div class="toolbar">
-                    {{ _('add')|button(url_for('member_insert', origin_id=actor.id)) }}
+                    {{ _('add')|button(url_for('actor_add_source', id_=actor.id)) }}
+                    {{ _('source')|button(url_for('source_insert', origin_id=actor.id)) }}
                 </div>
             {% endif %}
-            {{ tables['member'].display('member')|safe }}
+            {{ tables['source'].display('source')|safe }}
         </div>
-    {% endif %}
-    <div id="tab-reference">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('actor_add_reference', id_=actor.id)) }}
-                {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=actor.id)) }}
-                {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=actor.id)) }}
-                {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=actor.id)) }}
+        <div class="tab-pane fade" role="tabpanel" id="tab-event">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('involvement_insert', origin_id=actor.id)) }}
+                    {% for code in config['CLASS_CODES']['event'] %}
+                        {{ code|get_class_name|button(url_for('event_insert', code=code, origin_id=actor.id)) }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+            {{ tables['event'].display('event')|safe }}
+        </div>
+        <div class="tab-pane fade" role="tabpanel" id="tab-relation">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('relation_insert', origin_id=actor.id)) }}
+                    {% for code in config['CLASS_CODES']['actor'] %}
+                        {{ code|get_class_name|button(url_for('actor_insert', code=code, origin_id=actor.id)) }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+            {{ tables['relation'].display('relation')|safe }}
+        </div>
+        <div class="tab-pane fade" role="tabpanel" id="tab-member-of">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('membership_insert', origin_id=actor.id)) }}
+                </div>
+            {% endif %}
+            {{ tables['member_of'].display('member_of')|safe }}
+        </div>
+        {% if tables['member'] %}
+            <div class="tab-pane fade" role="tabpanel" id="tab-member">
+                {% if 'contributor'|is_authorized %}
+                    <div class="toolbar">
+                        {{ _('add')|button(url_for('member_insert', origin_id=actor.id)) }}
+                    </div>
+                {% endif %}
+                {{ tables['member'].display('member')|safe }}
             </div>
         {% endif %}
-        {{ tables['reference'].display('reference')|safe }}
-    </div>
-    <div id="tab-file">
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('actor_add_file', id_=actor.id)) }}
-                {{ _('file')|button(url_for('file_insert', origin_id=actor.id)) }}
-            </div>
-        {% endif %}
-        {{ tables['file'].display('file')|safe }}
-    </div>
-    {% if gis_data %}
-        <div id="tab-map">
-            <div id="map" class="map" style="float:none;margin:0;width:70em;"></div>
+        <div class="tab-pane fade" role="tabpanel" id="tab-reference">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('actor_add_reference', id_=actor.id)) }}
+                    {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=actor.id)) }}
+                    {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=actor.id)) }}
+                    {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=actor.id)) }}
+                </div>
+            {% endif %}
+            {{ tables['reference'].display('reference')|safe }}
         </div>
-        <script src="/static/js/map/map.js"></script>
-        <script>
-            /* workaround for leaflet bug when map not in the first tab */
-            $("body").on('click','#map-tab-id', function() {
-                map.panBy(new L.Point(0, -1));
-            });
-        </script>
-    {% endif %}
+        <div class="tab-pane fade" role="tabpanel" id="tab-file">
+            {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('actor_add_file', id_=actor.id)) }}
+                    {{ _('file')|button(url_for('file_insert', origin_id=actor.id)) }}
+                </div>
+            {% endif %}
+            {{ tables['file'].display('file')|safe }}
+        </div>
+        {% if gis_data %}
+            <div class="tab-pane fade" role="tabpanel" id="tab-map">
+                <div id="map" class="map" style="float:none;margin:0;width:70em;"></div>
+            </div>
+            <script src="/static/js/map/map.js"></script>
+            <script>
+                /* workaround for leaflet bug when map not in the first tab */
+                $("body").on('click','#map-tab-id', function() {
+                    map.panBy(new L.Point(0, -1));
+                });
+            </script>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
